--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.14.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
